--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,18 @@
             <version>0.46</version>
         </dependency>
         <!-- Fin de lo agregado -->
-                
+          
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>       
+                    
+                              
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
