--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,15 @@
         <version>3.1.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.practica01</groupId>
-    <artifactId>practica01</artifactId>
+    <groupId>com.tienda</groupId>
+    <artifactId>Tienda</artifactId>
     <version>1</version>
-    <name>ProyectoDesarrolloWeb</name>
-    <description>Demo project for Spring Boot</description>
+    <name>TiendaCorregida</name>
+    <description>Proyecto hecho en el curso Web y Patrones</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>20</java.version>
     </properties>
     <dependencies>
-        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -46,7 +45,7 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>5.2.3</version>
+            <version>5.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
@@ -67,7 +66,8 @@
             <groupId>org.webjars</groupId>
             <artifactId>webjars-locator</artifactId>
             <version>0.46</version>
-        </dependency> 
+        </dependency>
+       
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -77,12 +77,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>com.google.firebase</groupId>
             <artifactId>firebase-admin</artifactId>
             <version>9.1.1</version>
-        </dependency>  
+        </dependency>
+
+          
     </dependencies>
     
 
