--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,19 @@
-server.port = 91
+#SE DEFINE EL PUERTO POR DONDE ESCUCHA EL SERVIDOR
+server.port=80
 
-#Definimos el formato del log del sistema
+#Definimos el formato de log del sistema.
 logging.pattern.dateformat=hh:mm
 
-#Se elimina el banner
+#Se elimina el Banner
 spring.main.banner-mode=off
 
 #Para desarrollo se quita el cache del servidor, en produccion se activa
 spring.thymeleaf.cache=false
 
 #MySql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/BDproyecto?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=usuarioproyecto
-spring.datasource.password=claveproyecto.
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar1o_Clave.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -20,4 +21,3 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
-
